# lanex_online_platform

./: .env.example  .gitignore  Dockerfile  Procfile  README.md  alembic.ini  config.py  docker-compose.yml  logging_config.py  main.py  pyproject.toml  requirements.txt  server.py
alembic/: env.py
alembic/versions/: ffa671467903_test.py
api/: application_api.py  check_api.py
database/: async_db_connection.py  base.py  config.py  init_db.py  models.py  utils.py
database/crud/: application.py  test_result.py  user_session.py
html_pages/application_page/: application_page.html
html_pages/application_page/css/: style.css
html_pages/application_page/js/: application_main.js
html_pages/test_pages/common/css/: style.css  style_v_3.css
html_pages/test_pages/common/js/: test_engine.js
html_pages/test_pages/levels/elementary/: elementary_page.html
html_pages/test_pages/levels/elementary/js/: main.js  render_task1.js  render_task2.js  render_task3.js  render_task4.js  task1_data.js  task2_data.js  task3_data.js  task4_data.js
html_pages/test_pages/levels/pre_intermediate/: pre_intermediate_page.html
html_pages/test_pages/levels/pre_intermediate/js/: main.js  main_v_2.js  render_task1.js  render_task2.js  render_task3.js  render_task4.js  task1_data.js  task2_data.js  task3_data.js  task4_data.js
html_pages/test_pages/levels/starter/: starter_page.html
html_pages/test_pages/levels/starter/js/: main.js  render_task1.js  render_task2.js  render_task3.js  task1_data.js  task2_data.js  task3_data.js
html_pages/test_pages/levels/upper_intermediate/: upper_intermediate_page.html
nginx/conf.d/: app.conf
telegram/: handlers.py  keyboards.py  main.py
utilities/: check_function.py  creating_paths.py  dropbox_utils.py  pdf_generation.py  phone_utils.py  telegram_notifications.py
(+8 files in other folders)
