[tool.poetry]
name = "lanex-online-platform"
version = "0.1.0"
description = "Lanex Online Platform"
authors = ["Ruslan Kipchakov <your_email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.117.1"
uvicorn = {extras = ["standard"], version = "^0.37.0"}
sqlalchemy = "^2.0.43"
pydantic-settings = "^2.11.0"
asyncpg = "^0.30.0"
aiogram = "^3.22.0"
psycopg2-binary = "^2.9.10"
reportlab = "^4.4.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
