[tool.poetry]
name = "lanex-online-platform"
version = "0.1.0"
description = "Lanex Online Platform"
authors = ["Ruslan Kipchakov <your_email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.117.1"
uvicorn = {extras = ["standard"], version = "^0.37.0"}
sqlalchemy = "^2.0.43"
pydantic-settings = "^2.11.0"
asyncpg = "^0.30.0"
aiogram = "^3.22.0"
psycopg2-binary = "^2.9.10"
reportlab = "^4.4.4"
dropbox = "^12.0.2"
alembic = "^1.17.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
ruff = "^0.14.8"
black = "^25.12.0"
pyright = "^1.1.407"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = ["alembic"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.ruff.lint.isort]
known-first-party = ["lanex_online_platform"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
useLibraryCodeForTypes = true
exclude = ["alembic"]

[tool.ruff.lint.per-file-ignores]
"alembic/env.py" = ["E402", "I001"]
"api/*.py" = ["B008"]